<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.czero.smarttime.WatchTImer
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/watchtimerminute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00"
                android:textSize="100sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=":"
                android:textSize="80sp"/>
            <TextView
                android:id="@+id/watchtimersecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:textSize="100sp"/>

            <TextView
                android:id="@+id/watchtimermillisecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_startwatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/light"
                android:text="@string/startwatchtimer"/>
            <Button
                android:id="@+id/btn_pausewatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/dawn"
                android:text="@string/pausewatchtimer"/>
            <Button
                android:id="@+id/btn_continuewatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/light"
                android:text="@string/continuewatchtimer"/>
            <Button
                android:id="@+id/btn_resetwatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/dawn"
                android:text="@string/resetwatchtimer"/>
            <Button
                android:id="@+id/btn_lapwatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lapwatchtimer"
                android:background="@drawable/light"/>
        </LinearLayout>


        <ListView
            android:id="@+id/lvwatch"
            android:layout_weight="6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            >
        </ListView>


    </com.example.czero.smarttime.WatchTImer>
</LinearLayout>
